[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Fonts/Dynamic_Fonts_Data/legend_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GUI/LevelSelectionButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Levels/Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Miscellaneous/icon.png" type="Texture" id=5]
[ext_resource path="res://Scripts/GUI/level_selection_menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="PackedScene" id=2]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "LevelTemporary", "Node2D", "Sprite", "Sprite", "self_modulate", "position", "texture" ),
"node_count": 2,
"node_paths": [ NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 3, 2, -1, 3, 4, 0, 5, 1, 6, 2, 0 ),
"variants": [ Color( 0, 0.666667, 0.32549, 1 ), Vector2( 985.301, 453.45 ), ExtResource( 5 ) ],
"version": 2
}

[node name="LevelSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -274.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "select a level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LevelSelectionButton" parent="ColorRect" instance=ExtResource( 2 )]
margin_left = 40.2596
margin_right = 659.26
level_to_load = ExtResource( 4 )
level_name = "Level Test"
preview_image_stream_texture = ExtResource( 5 )
level_to_load_path = "res://Scenes/Levels/LevelTest.tscn"

[node name="LevelSelectionButton2" parent="ColorRect" instance=ExtResource( 2 )]
margin_left = 690.77
margin_right = 1309.77
level_to_load = SubResource( 2 )
level_name = "Level 1"
preview_image_stream_texture = ExtResource( 5 )
level_to_load_path = "res://Scenes/Levels/Level1.tscn"

[node name="LevelSelectionButton3" parent="ColorRect" instance=ExtResource( 2 )]
margin_left = 1334.92
margin_right = 1953.92
level_to_load = ExtResource( 4 )
level_name = "Level 1"
preview_image_stream_texture = ExtResource( 5 )
level_to_load_path = "res://Scenes/Levels/LevelTest.tscn"

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -143.5
margin_top = -146.735
margin_right = 143.5
margin_bottom = -48.7352
focus_neighbour_left = NodePath("../LevelSelectionButton")
focus_neighbour_top = NodePath("../LevelSelectionButton")
focus_neighbour_right = NodePath("../LevelSelectionButton")
focus_neighbour_bottom = NodePath("../LevelSelectionButton")
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_LevelSelectionMenu_visibility_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
